--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Treasure</title>
 </head>
 <body>
+    <div class="page">
+        <div class="message">
+            <div class="show__message">
 
+            </div>
+        </div>
+        <div class="move">
+            <p>MOVE: <span class="move__num">0</span></p>
+        </div>
+        <div class="control">
+            <button>Start game</button>
+        </div>
+        <div class="map">
+            <img class="map__img" src="img/map.png" alt="">
+            <div class="map__zone"></div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
