create marker navigation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </div>
         <div class="map">
             <img class="map__img" src="img/map.png" alt="">
-            <div class="map__zone"></div>
+            <div class="map__zone">
+                <div class="marker"></div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
