--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/css/style.css">
     <title>Treasure</title>
 </head>
 <body>
@@ -19,7 +19,9 @@
             <p>MOVE: <span class="move__num">0</span></p>
         </div>
         <div class="control">
-            <button>Start game</button>
+            <div class="btn_start">
+                <p>Start</p>
+            </div>
         </div>
         <div class="map">
             <img class="map__img" src="img/map.png" alt="">
