--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
         </div>
         <div class="map">
             <img class="map__img" src="img/map.png" alt="">
-            <div class="map__zone">
-                <div class="marker"></div>
-            </div>
+            <div class="zone_marker"></div>
+            <div class="map__zone"></div>
         </div>
     </div>
     <script src="script.js"></script>
