--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/css/style.css">
+    <link rel="shortcut icon" href="#">
     <title>Treasure</title>
 </head>
 <body>
     <div class="page">
         <div class="message">
             <div class="show__message">
-
+                <p>TEST MESSAGE</p>
             </div>
         </div>
         <div class="move">
