upgrade project, add adaptability, update sound function

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <title>Treasure</title>
 </head>
 <body>
+    <audio class="audio_play" autoplay src=""></audio>
     <div class="page">
         <div class="message">
-            <div class="show__message">
-                <p>TEST MESSAGE</p>
-            </div>
+            <p class="show__message"></p>
         </div>
         <div class="move">
             <p>MOVE: <span class="move__num">0</span></p>
